# LLM_arena_chess

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  conftest.py  docker-compose.yml  pyproject.toml
deploy/: DEPLOY.md
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN_BRIEF.md  FRONTEND.md  PROGRESS.md  PROJECT_SPEC.md  ROADMAP.md  TODO.md
docs/design/: README.md  standalone-template.html
examples/: README.md
examples/sample-game/: game.json  game.pgn  report.html
scripts/: generate_sample_game.py
src/arena/: __init__.py  cli.py  models.py
src/arena/analysis/: __init__.py  analyzer.py  (+2 more)
tests/: test_analysis_analyzer.py  test_analysis_classify.py  test_analysis_commentary.py  test_analysis_glyphs.py  test_arena_e2e.py  test_arena_player.py  test_arena_runner.py  test_board.py  test_board_endgame.py  test_catalog.py  test_cli.py  test_config.py  test_config_provider_names.py  test_engine_cache.py  test_engine_factory.py  test_engine_stockfish.py  test_full_e2e.py  test_models.py  test_move_parsing.py  test_obs_logging.py  test_pgn.py  test_pgn_export.py  test_prompts_context.py  test_prompts_context_fixtures.py  test_prompts_legal_moves.py  test_prompts_system.py  test_providers_anthropic.py  test_providers_base.py  test_providers_gemini.py  test_providers_openai.py  test_providers_retry.py  test_providers_transport.py  test_report_animation.py  test_report_board_image.py  test_report_render_from_fixture.py  test_report_template.py  test_smoke.py  test_stats_aggregate.py  test_stats_report.py  test_storage_game_store.py  (+13 more)
(+60 files in other folders)
