[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-chess-arena"
version = "0.1.0"
description = "Арена, где две LLM играют в шахматы: валидация ходов, PGN, HTML-отчёт, подсказки и анализ Stockfish."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM Chess Arena" }]
dependencies = [
    "python-chess>=1.999",
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=0.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
report-png = ["cairosvg>=2.7"]

[project.scripts]
arena = "arena.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
